# gcash

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  docker-gcash.bat  docker-gcash.sh  pyproject.toml
.github/workflows/: docker-publish.yml
deploy/gnucash-mcp/: .env.example  README.md  docker-compose.standalone.yml  docker-compose.yml
gnucash_cli/: __init__.py  account_lookup.py  auth.py  backup.py  book_access.py  book_backend.py  book_data.py  book_ops.py  cli.py  cli_safety.py  config.py  exceptions.py  locks.py  logging_config.py  mcp_server.py  presentation.py  serialization.py  server.py  server_ui.py  service.py  transaction_input.py  utils.py
gnucash_cli/commands/: __init__.py  accounts.py  currencies.py  db.py  transactions.py
gnucash_cli/services/: __init__.py  accounts.py  currencies.py  transactions.py
tests/: conftest.py  test_account_identifiers.py  test_architecture_refactors.py  test_cli.py  test_config.py  test_db.py  test_integration_postgres.py  test_locks.py  test_mcp_server.py  test_server.py  test_transactions.py  test_utils.py
