[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnucash-cli"
version = "0.1.0"
description = "CLI tool for GnuCash bookkeeping, designed for AI agent automation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "piecash>=1.2.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
test = ["pytest", "pytest-cov"]

[project.scripts]
gcash = "gnucash_cli.cli:main"

[tool.setuptools.packages.find]
include = ["gnucash_cli*"]
