[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnucash-cli"
version = "0.1.0"
description = "CLI tool for GnuCash bookkeeping, designed for AI agent automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "piecash>=1.2.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "mcp>=1.2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff>=0.8.0"]
test = ["pytest", "pytest-cov"]

[project.scripts]
gcash = "gnucash_cli.cli:main"

[tool.setuptools.packages.find]
include = ["gnucash_cli*"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require external services such as a disposable PostgreSQL database",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"gnucash_cli/cli.py" = ["E402"]
